# wine_som

./: .env.example  .gitignore  CLAUDE.md  README.md  app_design.md  app_idea.md  app_structure.md  pyproject.toml  vercel.json
.claude/: settings.local.json
.github/workflows/: daily-vivino.yml  twin-liquors-test.yml  weekly-scrape.yml
backend/: config.py  conftest.py  db.py  requirements.txt  utils.py
backend/api/: main.py  ratelimit.py  schemas.py
backend/enrichment/: grapeminds.py  label_scan.py  non_wine.py  pipeline.py  vivino.py
backend/recommendation/: candidate_filters.py  claude_client.py  deals.py  flavor_profiles.py  intent.py  label_match.py  scorer.py  structure_profiles.py
backend/scrapers/: antonellis.py  aoc_selections.py  base.py  central_market.py  geraldines.py  harvest_wine.py  heb.py  kroger.py  pogos.py  specs.py  twin_liquors.py  us_natural_wine.py
backend/scripts/: _watch_current_drain.sh  backfill_grapes.py  backfill_store_coords.py  backfill_structure_llm.py  backfill_wine_type.py  benchmark_recommend.py  com.somm.extraction-enrich.plist  com.somm.specs.plist  com.somm.twin-liquors.plist  com.somm.vivino-enrich.plist  lib_notify_slack.sh  merge_duplicate_wines.py  persist_structure.py  (+15 more)
data/: heb-store-list.csv  heb-stores.csv
docs/: design-brief-price-promo.md  design-prompt-accounts.md  mac-mini-enrichment-server.md  mini-agent-tasks.md  product-family-key.md  user-accounts-roadmap.md
frontend/: .env.example  CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
(+291 files in other folders)
